# vad-jni-rust

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: deploy.yml
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/src/: lib.rs  vad.rs  vad_container.rs
rust/src/util/: exception.rs  into_exception.rs  mod.rs  pointer.rs
src/main/java/com/plasmoverse/vad/: Vad.java  VadException.java  VadLibrary.java  VadMode.java
src/test/java/com/plasmoverse/vad/: VadTest.java
